# web-ml

./: Cargo.toml  README.md
src/: setup.rs
src/systems/: egui_ui.rs
web/: index.html
web/pkg/: texture-bevy-egui-app.d.ts  texture-bevy-egui-app.js  texture-bevy-egui-app_bg.wasm.d.ts
