[package]
name = "web-ml"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["free_camera"] }
bevy_egui = "0.39.1"
burn = "0.20"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

